--- a/index.html
+++ b/index.html
@@ -1,174 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Khushboo Patel | Cyber Security & Data Analyst</title>
 
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 
 body{
   font-family:'Poppins',sans-serif;
-  background:#f9f9f9;
-  color:#333;
+  background:#f6f7fb;
+  color:#2d2d2d;
   line-height:1.9;
 }
 
-a{text-decoration:none;color:inherit}
-
 section{
-  padding:80px 20px;
-  max-width:1100px;
+  padding:90px 25px;
+  max-width:1200px;
   margin:auto;
 }
 
 h2{
-  color:#0a192f;
-  margin-bottom:30px;
-  border-bottom:2px solid #0a192f;
-  display:inline-block;
-  padding-bottom:6px;
+  font-size:2.2em;
+  margin-bottom:35px;
+  color:#24324a;
 }
 
 /* HEADER */
 header{
-  background:#0a192f;
-  color:white;
+  background:linear-gradient(135deg,#A8E6CF,#DCCEF9);
+  padding:140px 25px;
   text-align:center;
-  padding:120px 20px;
 }
-header h1{font-size:3em}
-header p{color:#64ffda;font-size:1.2em;margin-top:10px}
+header h1{font-size:3.5em}
+header p{font-size:1.3em;margin-top:10px}
 
 /* NAV */
 nav{
   position:sticky;
   top:0;
-  background:#112240;
+  background:white;
   display:flex;
   justify-content:center;
-  gap:25px;
-  padding:15px;
+  gap:30px;
+  padding:18px;
+  box-shadow:0 8px 30px rgba(0,0,0,0.08);
   z-index:100;
 }
-nav a{color:white;font-weight:600}
-nav a:hover{color:#64ffda}
+nav a{font-weight:600;color:#444}
 
-/* FADE */
-.fade-up{
-  opacity:0;
-  transform:translateY(30px);
-  transition:0.7s ease;
-}
-.fade-up.show{
-  opacity:1;
-  transform:none;
-}
-
-/* BUTTONS */
+/* BUTTON */
 .resume-btn{
   display:inline-block;
-  background:#64ffda;
-  color:#0a192f;
-  padding:12px 22px;
-  border-radius:30px;
+  background:#FFD6C9;
+  padding:14px 26px;
+  border-radius:35px;
+  margin-top:30px;
   font-weight:600;
-  margin-top:25px;
 }
+
+/* FADE */
+.fade-up{opacity:0;transform:translateY(30px);transition:0.8s}
+.fade-up.show{opacity:1;transform:none}
 
 /* SKILLS */
 .skills{
   display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:20px;
-}
-.skill-box{
-  background:white;
-  padding:22px;
-  border-radius:14px;
-  box-shadow:0 8px 25px rgba(0,0,0,0.08);
-}
-
-/* PROJECTS */
-.projects{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
   gap:25px;
 }
-.project-card{
-  background:white;
-  padding:25px;
-  border-radius:16px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.12);
+.skill-box{
+  background:#ffffff;
+  padding:30px;
+  border-radius:20px;
+  box-shadow:0 12px 40px rgba(0,0,0,0.1);
 }
 
-/* EXPERIENCE ACCORDION */
-.exp-card{
+/* EXPANDABLE CARDS */
+.card{
   background:white;
-  padding:25px 28px;
-  border-radius:16px;
-  margin-bottom:25px;
-  box-shadow:0 10px 30px rgba(0,0,0,0.12);
+  padding:35px;
+  border-radius:24px;
+  margin-bottom:30px;
+  box-shadow:0 18px 45px rgba(0,0,0,0.12);
   cursor:pointer;
 }
-.exp-header{
+.card-header{
   display:flex;
   justify-content:space-between;
   align-items:center;
 }
-.exp-header h3{color:#0a192f}
-.exp-header span{font-size:0.9em;color:#555}
-.exp-content{
-  margin-top:18px;
+.card-header h3{font-size:1.4em}
+.card-header span{color:#666;font-size:0.95em}
+.card-content{
+  margin-top:25px;
   display:none;
 }
-.exp-card.active .exp-content{display:block}
+.card.active .card-content{display:block}
 
-/* EDUCATION & LISTS */
-ul{margin-left:20px;margin-top:10px}
-li{margin-bottom:8px}
-
-/* CONTACT */
-#contact p{margin-bottom:10px}
+/* PROJECT COLOR TAGS */
+.project-energy{border-left:10px solid #A8E6CF}
+.project-ai{border-left:10px solid #FFD6C9}
+.project-db{border-left:10px solid #DCCEF9}
 
 /* FOOTER */
 footer{
   text-align:center;
-  padding:25px;
-  background:#f1f1f1;
-  margin-top:40px;
-}
-
-/* DARK MODE */
-body.dark{background:#0a192f;color:white}
-body.dark nav{background:#020c1b}
-body.dark .skill-box,
-body.dark .project-card,
-body.dark .exp-card{background:#112240}
-body.dark footer{background:#112240}
-
-/* DARK BUTTON */
-.dark-btn{
-  position:fixed;
-  top:20px;
-  right:20px;
-  background:#64ffda;
-  border:none;
-  padding:10px 15px;
-  border-radius:30px;
-  cursor:pointer;
-  font-weight:600;
+  padding:35px;
+  background:#eceef5;
 }
 </style>
 </head>
 
 <body>
-
-<button class="dark-btn" onclick="toggleDark()">🌙</button>
 
 <header>
   <h1>Khushboo Patel</h1>
@@ -181,23 +128,20 @@ body.dark footer{background:#112240}
   <a href="#projects">Projects</a>
   <a href="#experience">Experience</a>
   <a href="#education">Education</a>
-  <a href="#certifications">Certifications</a>
   <a href="#contact">Contact</a>
 </nav>
 
 <section id="about" class="fade-up">
   <h2>Profile Summary</h2>
   <p>
-    Cyber Security and IT professional specialising in risk-driven data analytics,
+    Cyber Security and IT professional specialising in risk-driven analytics,
     IT/OT governance, and compliance automation within regulated environments.
-    Experienced in designing organisation-wide cyber security policies, improving
-    system integrity, and reducing operational risks.
   </p>
   <p>
-    Skilled in cyber and operational risk assessments, Python-based automation,
-    SQL-driven analytics, and Power BI dashboards. Bringing strong experience
-    from calibration, laboratory operations, and regulatory environments, with
-    a proven ability to bridge technical teams and business needs.
+    I bring a rare blend of cyber governance expertise, hands-on data analytics,
+    and operational experience from calibration and laboratory environments.
+    My strength lies in translating complex cyber and compliance requirements
+    into practical, business-aligned solutions.
   </p>
 
   <a href="Khushboo_Patel_Resume.pdf" class="resume-btn" download>
@@ -209,100 +153,142 @@ body.dark footer{background:#112240}
   <h2>Key Skills</h2>
   <div class="skills">
     <div class="skill-box">Cyber Risk Management (ISO 27001, NIST, COBIT, ISA/IEC)</div>
-    <div class="skill-box">IT & OT Security</div>
-    <div class="skill-box">Vulnerability Assessment</div>
-    <div class="skill-box">Policy Development & Governance</div>
-    <div class="skill-box">Risk Advisory & Audit Preparation</div>
-    <div class="skill-box">Python • SQL • HTML • JavaScript</div>
-    <div class="skill-box">Power BI Dashboards</div>
-    <div class="skill-box">Microsoft 365 & SharePoint</div>
+    <div class="skill-box">IT & OT Security & Governance</div>
+    <div class="skill-box">Python, SQL, Power BI, Automation</div>
+    <div class="skill-box">Policy Development & Audit Readiness</div>
     <div class="skill-box">Stakeholder Communication & Leadership</div>
-    <div class="skill-box">Quality & Compliance Management</div>
+    <div class="skill-box">Quality & Regulatory Compliance</div>
   </div>
 </section>
 
 <section id="projects" class="fade-up">
-  <h2>Projects</h2>
-  <div class="projects">
-    <div class="project-card">
-      <h3>Energy Consumption Prediction</h3>
-      <p>Machine learning–based risk modelling to predict monthly energy consumption.</p>
+  <h2>Projects (Click to Expand)</h2>
+
+  <div class="card project-energy">
+    <div class="card-header">
+      <h3>Energy Consumption Prediction (ML)</h3>
+      <span>Machine Learning • Risk Modelling</span>
     </div>
-    <div class="project-card">
-      <h3>Smart Learning Platform</h3>
-      <p>MongoDB schema design for a connected learning ecosystem with analytics.</p>
+    <div class="card-content">
+      <p>
+        Developed regression-based machine learning models to predict monthly
+        energy consumption using engineered features and exploratory data analysis.
+      </p>
+      <p>
+        The project focused on risk modelling, evaluating linear, ridge, and lasso
+        regression techniques to balance accuracy, interpretability, and overfitting
+        — aligning closely with real-world operational risk assessment.
+      </p>
     </div>
-    <div class="project-card">
+  </div>
+
+  <div class="card project-db">
+    <div class="card-header">
+      <h3>Smart Learning Platform – MongoDB</h3>
+      <span>NoSQL • Data Architecture</span>
+    </div>
+    <div class="card-content">
+      <p>
+        Designed a scalable MongoDB schema for a smart, connected learning ecosystem
+        supporting subscriptions, downloadable content, analytics, and usage tracking.
+      </p>
+      <p>
+        Emphasis was placed on data integrity, performance, and governance,
+        ensuring the platform could scale securely while maintaining visibility
+        into user behaviour and operational metrics.
+      </p>
+    </div>
+  </div>
+
+  <div class="card project-ai">
+    <div class="card-header">
       <h3>AI Symposium Research</h3>
-      <p>Research on risks and governance of emotionally intelligent AI systems.</p>
+      <span>AI Ethics • Governance</span>
+    </div>
+    <div class="card-content">
+      <p>
+        Conducted academic research on the risks and benefits of emotionally
+        intelligent generative AI systems within organisational and societal contexts.
+      </p>
+      <p>
+        Analysed governance gaps, ethical concerns, and regulatory challenges,
+        proposing risk mitigation strategies aligned with emerging AI governance
+        frameworks and cyber security principles.
+      </p>
     </div>
   </div>
 </section>
 
 <section id="experience" class="fade-up">
-  <h2>Professional Experience</h2>
+  <h2>Professional Experience (Click to Expand)</h2>
 
-  <div class="exp-card">
-    <div class="exp-header">
+  <div class="card">
+    <div class="card-header">
       <h3>Calibration Technician – NVMS</h3>
-      <span>Current | West Leederville, WA</span>
+      <span>Current | WA</span>
     </div>
-    <div class="exp-content">
-      <p>Designed and implemented NVMS cyber security policies governing IT/OT systems.</p>
-      <p>Conducted cyber and operational risk assessments across laboratory environments.</p>
-      <p>Developed Python automation tools and Power BI dashboards for compliance and audits.</p>
-      <p>Integrated calibration workflows with digital systems, SAP, and quality documentation.</p>
+    <div class="card-content">
+      <p>
+        Designed and implemented organisation-wide Cyber Security Policies
+        governing IT and OT systems in a regulated laboratory environment.
+      </p>
+      <p>
+        Conducted cyber and operational risk assessments, identifying vulnerabilities
+        across instrumentation, data flows, and supporting IT infrastructure.
+      </p>
+      <p>
+        Developed Python-based automation tools and Power BI dashboards to improve
+        compliance reporting, audit readiness, traceability, and management visibility.
+      </p>
     </div>
   </div>
 
-  <div class="exp-card">
-    <div class="exp-header">
+  <div class="card">
+    <div class="card-header">
       <h3>Team Leader – Materials Technology Centre</h3>
-      <span>Sep 2021 – Dec 2023 | Hazelmere, WA</span>
+      <span>Sep 2021 – Dec 2023</span>
     </div>
-    <div class="exp-content">
-      <p>Led materials testing under Australian Standards and NATA accreditation.</p>
-      <p>Managed NCRs, audits, trend reporting, and continuous improvement initiatives.</p>
-      <p>Provided technical advice and managed customer complaints and resolutions.</p>
+    <div class="card-content">
+      <p>
+        Led materials testing operations under Australian Standards and NATA
+        accreditation, ensuring consistent quality and regulatory compliance.
+      </p>
+      <p>
+        Managed audits, non-conformances, trend analysis, and continuous improvement
+        initiatives while providing technical guidance to teams and stakeholders.
+      </p>
     </div>
   </div>
 
-  <div class="exp-card">
-    <div class="exp-header">
+  <div class="card">
+    <div class="card-header">
       <h3>Laboratory Technician – Midland Brick</h3>
-      <span>Jan 2020 – Sep 2021 | South Guildford, WA</span>
+      <span>Jan 2020 – Sep 2021</span>
     </div>
-    <div class="exp-content">
-      <p>Conducted compliance testing for environmental and operational risks.</p>
-      <p>Maintained secure digital records, instrumentation data, and reporting systems.</p>
+    <div class="card-content">
+      <p>
+        Conducted compliance testing for environmental and operational risks,
+        maintaining secure digital records and instrumentation data systems
+        aligned with regulatory requirements.
+      </p>
     </div>
   </div>
 </section>
 
 <section id="education" class="fade-up">
   <h2>Education</h2>
-  <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)<br>
-     Major: Cyber Security & Data Analysis</p>
-  <p><strong>Diploma of Information Technology</strong> – Equinim College, 2025</p>
+  <p><strong>Master of ICT</strong> – University of the Sunshine Coast (Expected 2025)</p>
+  <p>Major: Cyber Security & Data Analysis</p>
+  <p><strong>Diploma of Information Technology</strong> – Equinim College</p>
   <p><strong>Bachelor & Master of Science</strong> – Biotechnology</p>
-</section>
-
-<section id="certifications" class="fade-up">
-  <h2>Certifications</h2>
-  <ul>
-    <li>Microsoft Certified: Security, Compliance & Identity Fundamentals</li>
-    <li>IT Specialist – Python</li>
-    <li>NATA – Quality Management in Laboratory</li>
-    <li>Excel Advanced – Power BI, VBA</li>
-  </ul>
 </section>
 
 <section id="contact" class="fade-up">
   <h2>Contact</h2>
   <p>📍 Aveley, WA 6069</p>
-  <p>📧 <a href="mailto:p.kh2601@gmail.com">p.kh2601@gmail.com</a></p>
+  <p>📧 p.kh2601@gmail.com</p>
   <p>📱 +61 415 225 295</p>
-  <p>🔗 <a href="https://www.linkedin.com/in/khushboo-patel-1959a812a" target="_blank">LinkedIn</a></p>
+  <p>🔗 LinkedIn: linkedin.com/in/khushboo-patel-1959a812a</p>
 </section>
 
 <footer>
@@ -310,21 +296,12 @@ body.dark footer{background:#112240}
 </footer>
 
 <script>
-function toggleDark(){
-  document.body.classList.toggle("dark");
-}
-
-const faders=document.querySelectorAll(".fade-up");
 const observer=new IntersectionObserver(entries=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add("show");
-    }
-  });
+  entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add("show")});
 },{threshold:0.2});
-faders.forEach(el=>observer.observe(el));
+document.querySelectorAll(".fade-up").forEach(el=>observer.observe(el));
 
-document.querySelectorAll(".exp-card").forEach(card=>{
+document.querySelectorAll(".card").forEach(card=>{
   card.addEventListener("click",()=>card.classList.toggle("active"));
 });
 </script>
