--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
     <style>
         :root {
-            /* Cyber Teal & Mint Palette */
             --primary: #0d9488;      
             --primary-light: #5eead4; 
             --primary-dark: #0f766e;  
@@ -80,7 +79,7 @@
             position: sticky;
             top: 20px;
             width: 90%;
-            max-width: 750px;
+            max-width: 850px;
             margin: 0 auto;
             background: var(--glass);
             backdrop-filter: blur(16px);
@@ -128,7 +127,15 @@
         .card-header span, .card-header small { color: var(--primary); font-weight: 600; font-size: 0.95rem; }
         
         .card-content { padding: 0 30px; max-height: 0; overflow: hidden; transition: 0.5s ease; opacity: 0; }
-        .card.active .card-content { padding-bottom: 30px; max-height: 1000px; opacity: 1; border-top: 1px solid #f1f5f9; padding-top: 20px; }
+        .card.active .card-content { padding-bottom: 30px; max-height: 2000px; opacity: 1; border-top: 1px solid #f1f5f9; padding-top: 20px; }
+
+        .project-img {
+            width: 100%;
+            border-radius: 12px;
+            margin-bottom: 20px;
+            border: 1px solid var(--border);
+            display: block;
+        }
 
         /* LISTS */
         ul { padding-left: 20px; }
@@ -190,7 +197,7 @@
     <h2 class="section-title">Profile Summary</h2>
     <p>Cyber Security and IT professional with a solid foundation in cyber risk management, governance, compliance, and data-driven operations, supported by postgraduate studies in Information and Communication Technology (ICT).</p>
     <p>Experienced in designing and implementing organisation-wide Cyber Security Policies at NVMS, strengthening IT/OT governance, improving system integrity, and reducing operational risks. Skilled in conducting cyber and operational risk assessments, process optimisation, and automation using Python, SQL, and Power BI.</p>
-    <p>Bringing several years of experience in calibration, laboratory operations, and technical service delivery, with a strong background in data management systems, equipment workflows, quality control, and regulatory compliance. Adept at integrating calibration processes with digital systems, enhancing accuracy, traceability, and reporting efficiency.</p>
+    <p>Bringing several years of experience in calibration, laboratory operations, and technical service delivery, with a strong background in data management systems, quality control, and regulatory compliance. Adept at integrating calibration processes with digital systems, enhancing accuracy, traceability, and reporting efficiency.</p>
     
     <div style="text-align:center">
         <a href="Khushboo_Patel_Resume 2025.docx" class="resume-btn" download>📄 Download Official Resume</a>
@@ -200,7 +207,7 @@
 <section id="skills" class="fade-in">
     <h2 class="section-title">Key Skills</h2>
     <div class="skills-grid">
-        <div class="skill-box"><i class="fas fa-shield-halved"></i> Cyber Risk Management (ISO 27001, NIST, COBIT, ISA/IEC)</div>
+        <div class="skill-box"><i class="fas fa-shield-halved"></i> Cyber Risk Management (ISO 27001, NIST, ISA/IEC)</div>
         <div class="skill-box"><i class="fas fa-network-wired"></i> IT & OT Security & Governance</div>
         <div class="skill-box"><i class="fas fa-code"></i> Python, SQL, Power BI, Automation</div>
         <div class="skill-box"><i class="fas fa-clipboard-check"></i> Policy Development & Audit Readiness</div>
@@ -214,34 +221,86 @@
 
     <div class="card">
         <div class="card-header">
-            <h3>Energy Consumption Prediction (ML)</h3>
-            <span>Machine Learning • Risk Modelling</span>
+            <div>
+                <h3>ETL Pipeline Workflow Dashboard</h3>
+                <small>Data Engineering • Monitoring • SQL</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class="card-content">
+            <img src="Dashboard.png" alt="ETL Pipeline Workflow Dashboard" class="project-img">
+            <p>Designed a comprehensive monitoring interface for a Data Processing and Integration Pipeline, visualizing the end-to-end flow of data from extraction to loading.</p>
+            <ul>
+                <li><strong>Workflow Visualization:</strong> Built a clear visual map of Extract (CSV, API, SQL), Transform (Cleaning, Validation), and Load (Data Warehouse) stages.</li>
+                <li><strong>Real-time Metrics:</strong> Integrated system performance tracking including CPU and Memory usage with live data preview charts.</li>
+                <li><strong>Operational Tracking:</strong> Created status logs and job statistics to monitor records processed and pipeline duration.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header">
+            <div>
+                <h3>Commercial Website – NVMS Solutions</h3>
+                <small>UI/UX Design • Information Architecture</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class="card-content">
+            <img src="NVMS-Website.png" alt="NVMS Solutions Corporate Website" class="project-img">
+            <p>Developed a high-trust digital platform for an industry leader in noise and vibration management, focusing on transforming complex services into a digestible commercial format.</p>
+            <ul>
+                <li><strong>Service Architecture:</strong> Implemented a 4-pillar card layout to highlight Asset Protection, Digital Solutions, Sensors, and Training.</li>
+                <li><strong>Sustainability Showcase:</strong> Designed a dedicated section for "Green" initiatives to support B2B corporate social responsibility goals.</li>
+                <li><strong>Brand Identity:</strong> Maintained a professional industrial aesthetic consistent with the company's 30+ year history.</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header">
+            <div>
+                <h3>Smart Task Management Application</h3>
+                <small>Web Development • JSON Export • UX</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class="card-content">
+            <img src="To Do App.png" alt="Smart Todo App Interface" class="project-img">
+            <p>Created a modern, interactive task management tool designed for personal productivity and ease of data portability.</p>
+            <ul>
+                <li><strong>Feature Set:</strong> Built core functionality for creating, viewing, and filtering tasks by priority, category, or status.</li>
+                <li><strong>Data Portability:</strong> Developed an export feature allowing users to download their full task list as a JSON file.</li>
+                <li><strong>UI Design:</strong> Focused on a clean interface with clear navigation between "Add Task," "View Tasks," and "Export Data".</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-header">
+            <div>
+                <h3>Energy Consumption Prediction (ML)</h3>
+                <small>Machine Learning • Risk Modelling</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
         </div>
         <div class="card-content">
             <p>Developed regression-based machine learning models to predict monthly energy consumption using engineered features and exploratory data analysis.</p>
-            <p>The project focused on risk modelling, evaluating linear, ridge, and lasso regression techniques to balance accuracy, interpretability, and overfitting — aligning closely with real-world operational risk assessment.</p>
+            <p>The project focused on risk modelling, evaluating linear, ridge, and lasso regression techniques to balance accuracy and interpretability.</p>
         </div>
     </div>
 
     <div class="card">
         <div class="card-header">
-            <h3>Smart Learning Platform – MongoDB</h3>
-            <span>NoSQL • Data Architecture</span>
+            <div>
+                <h3>AI Symposium Research</h3>
+                <small>AI Ethics • Governance</small>
+            </div>
+            <i class="fas fa-chevron-down"></i>
         </div>
         <div class="card-content">
-            <p>Designed a scalable MongoDB schema for a smart, connected learning ecosystem supporting subscriptions, downloadable content, analytics, and usage tracking.</p>
-            <p>Emphasis was placed on data integrity, performance, and governance, ensuring the platform could scale securely while maintaining visibility into user behaviour and operational metrics.</p>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-            <h3>AI Symposium Research</h3>
-            <span>AI Ethics • Governance</span>
-        </div>
-        <div class="card-content">
-            <p>Conducted academic research on the risks and benefits of emotionally intelligent generative AI systems within organisational and societal contexts.</p>
-            <p>Analysed governance gaps, ethical concerns, and regulatory challenges, proposing risk mitigation strategies aligned with emerging AI governance frameworks and cyber security principles.</p>
+            <p>Conducted academic research on the risks and benefits of emotionally intelligent generative AI systems within organisational contexts.</p>
+            <p>Analysed governance gaps and regulatory challenges, proposing risk mitigation strategies aligned with emerging AI frameworks.</p>
         </div>
     </div>
 </section>
@@ -253,7 +312,7 @@
         <div class="card-header">
             <div>
                 <h3>Calibration Technician – NVMS</h3>
-                <small>Current | WA</small>
+                <small>Current | Western Australia</small>
             </div>
             <i class="fas fa-chevron-down"></i>
         </div>
@@ -261,16 +320,11 @@
             <ul>
                 <li>Designed and implemented organisation-wide Cyber Security policies governing IT and OT systems in a regulated laboratory environment.</li>
                 <li>Conducted cyber and operational risk assessments across instrumentation, data flows, and supporting IT infrastructure.</li>
-                <li>Developed Python-based automation tools and Power BI dashboards to improve compliance reporting, audit readiness, and management visibility.</li>
+                <li>Developed Python-based automation tools and Power BI dashboards to improve compliance reporting and audit readiness.</li>
                 <li>Built Power BI dashboards to monitor calibration performance, cybersecurity vulnerabilities, and system integrity.</li>
                 <li>Integrated data management systems to streamline calibration workflows and ensure full traceability.</li>
-                <li>Collaborated with engineers and management to embed cybersecurity best practices into operational processes.</li>
                 <li>Performed calibration and maintenance of noise meters in line with regulatory and accreditation standards.</li>
                 <li>Managed SAP-based inventory, quoting, booking, invoicing, and reporting activities.</li>
-                <li>Implemented process improvements to enhance accuracy, efficiency, and turnaround time.</li>
-                <li>Managed laboratory scheduling, equipment maintenance, workflow coordination, and quality control.</li>
-                <li>Maintained full regulatory, quality, and audit documentation.</li>
-                <li>Provided technical support and training to internal teams.</li>
             </ul>
         </div>
     </div>
@@ -285,40 +339,11 @@
         </div>
         <div class="card-content">
             <ul>
-                <li>Coordinated materials testing (cement physical & chemical) under Australian Standards & NATA accreditation.</li>
+                <li>Coordinated materials testing under Australian Standards and NATA accreditation.</li>
                 <li>Ensured compliance with Quality Manual, ITPs, and accreditation requirements.</li>
                 <li>Reviewed test data, issued reports, and maintained statistical databases.</li>
                 <li>Managed product specification changes and Non-Conformance Reports (NCRs).</li>
-                <li>Delivered trend reporting and quality improvement recommendations.</li>
-                <li>Participated in Research & Development (R&D) and design activities.</li>
-                <li>Managed customer complaints and resolutions.</li>
                 <li>Provided technical advice to Technical Managers and Sales Teams.</li>
-                <li>Maintained hazard awareness and workplace safety.</li>
-                <li>Assisted in business, NATA, and safety audits.</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-header">
-            <div>
-                <h3>Laboratory Technician – Midland Brick</h3>
-                <small>Jan 2020 – Sep 2021</small>
-            </div>
-            <i class="fas fa-chevron-down"></i>
-        </div>
-        <div class="card-content">
-            <ul>
-                <li>Conducted compliance testing for environmental and operational risks.</li>
-                <li>Managed instrumentation data and reporting systems.</li>
-                <li>Developed secure digital record systems for testing and compliance.</li>
-                <li>Maintained secure digital records and instrumentation data systems aligned with regulatory requirements.</li>
-                <li>Delivered trend reporting and quality improvement recommendations.</li>
-                <li>Participated in R&D and design activities.</li>
-                <li>Managed customer complaints and resolutions.</li>
-                <li>Provided technical advice to Technical Managers and Sales Teams.</li>
-                <li>Maintained hazard awareness and workplace safety.</li>
-                <li>Assisted in business and safety audits.</li>
             </ul>
         </div>
     </div>
